syntax = "proto3";

package axhv;

option go_package = "aexon/internal/provider/axhv/pb";

service VmService {
  // Lifecycle Management
  rpc CreateVm(CreateVmRequest) returns (VmResponse);
  rpc StartVm(VmIdRequest) returns (VmResponse);
  rpc StopVm(VmIdRequest) returns (VmResponse);
  rpc PauseVm(VmIdRequest) returns (VmResponse);
  rpc ResumeVm(VmIdRequest) returns (VmResponse);
  rpc RebootVm(VmIdRequest) returns (VmResponse);
  rpc DeleteVm(VmIdRequest) returns (VmResponse);
  
  // Resource Management
  rpc ResizeDisk(ResizeDiskRequest) returns (VmResponse);
  
  // Information & Stats
  rpc ListVms(Empty) returns (ListVmsResponse);
  rpc GetVmStats(GetVmStatsRequest) returns (VmStatsResponse);
  rpc GetHostStats(Empty) returns (HostStatsResponse);
}

// Common Types
message Empty {}

message VmIdRequest {
  string id = 1;
}

message GetVmStatsRequest {
  string id = 1;
  string tap_name = 2; // Optional: overrides auto-detection
}

message VmResponse {
  bool success = 1;
  string message = 2;
  string vm_id = 3;
}

// VM Creation
message CreateVmRequest {
  string id = 1;              // Unique ID (UUID recommended)
  uint32 vcpu = 2;            // Number of vCPUs (1-256)
  uint32 memory_mib = 3;      // Memory in MiB
  string kernel_path = 4;     // Absolute path to vmlinux
  
  // Option 1: Direct path (for custom images)
  string rootfs_path = 5;     // Absolute path to rootfs image (optional if template set)
  
  // Network (TAP auto-generated as "axhv-{id}")
  string guest_ip = 7;        // Guest IP address (e.g., 172.16.0.2)
  string guest_gateway = 8;   // Gateway IP (e.g., 172.16.0.1)
  string boot_args = 9;       // Extra boot args (optional)
  
  // Option 2: Template name (auto-download from R2 + clone)
  string template = 10;       // Template name (e.g., "ubuntu-rootfs.ext4")
  
  // Disk size (cloned disk will be resized to this)
  uint32 disk_size_gb = 11;   // Disk size in GB (default: same as source, min: 2)
  
  // Free Tier Network Control
  uint32 bandwidth_limit_mbps = 14;  // Rate limit (0 = unlimited, e.g., 10 for 10Mbps)
  map<uint32, uint32> port_map_tcp = 15;  // TCP port forwarding: host_port -> guest_port
  map<uint32, uint32> port_map_udp = 16;  // UDP port forwarding: host_port -> guest_port
}

// Disk Resize
message ResizeDiskRequest {
  string id = 1;
  uint32 new_size_gb = 2;
}

// Listing
message ListVmsResponse {
  repeated VmInfo vms = 1;
}

message VmInfo {
  string id = 1;
  uint32 pid = 2;
  string socket_path = 3;
}

// Stats
message VmStatsResponse {
  uint64 cpu_usage_us = 1;      // Total CPU usage in microseconds
  uint64 memory_used_bytes = 2; // Current RAM usage
  uint64 net_rx_bytes = 3;      // Total accumulated download
  uint64 net_tx_bytes = 4;      // Total accumulated upload
  uint64 disk_allocated_bytes = 5; // Physical file size on host (sparse)
}

message HostStatsResponse {
  uint64 disk_total_mib = 1;
  uint64 disk_used_mib = 2;
  uint64 disk_free_mib = 3;
  uint32 vm_count = 4;
}
